
2021-09-17  Simon Sobisch <simonsobisch@gnu.org>

	* parser.y: some minor conflicts "resolved", support of old extension
	  SCREEN SECTION VALUE without "VALUE", fixed ACU's PROPERTY xyz ARE
	* warning.def: new option cb_warn_repository_checks (defaults to on)
	* typeck.c: depend repository checks on cb_warn_repository_checks

2021-09-16  Edward Hart <edward.dan.hart@gmail.com>

	* reserved.c: fixed bug #764, where deleting a reserved word which
	  shares the same hash as another word could make the other word
	  inaccessible in the reserve word table.

2021-09-15  Simon Sobisch <simonsobisch@gnu.org>

	* parser.y (emit entry), typeck.c (cb_validate_parameters_and_returning),
	  tree.h: extracted function from parser.y
	* parser.y, reserved.c, codegen.c, tree.h, error.c: work on
	  partial integration of patch #32 (2017-10-07) for supporting PROTOTYPE,
	  adjusting checks from numbered LINKAGE items to PROCEDURE DIVISION USING

2021-09-14  Simon Sobisch <simonsobisch@gnu.org>

	* config.def, flag.def, cobc.c, codegen.c, field.c, typeck.c:
	  moved and renamed cb_flag_odoslide to dialect option cb_odoslide and
	  explicit check for it along complex_odo instead of setting it
	* ppparse.y, pplex.l, scanner.l, cobc.c (process_translate):
	  add support for ODOSLIDE directive

2021-09-07  Simon Sobisch <simonsobisch@gnu.org>

	* parser.y: combined multiple exception_phrases nonterminals moving the
	  single difference to the new function get_handler_type_from_statement
	  which is a bit slower but reduces duplications
	* reserved.c, parser.y: added parsing for RAISING clause, combining
	  identical code forEXIT and GOBACK to (goback_exit_body)
	* reserved.c, parser.y, scanner.l, tree.h: initial parsing approach for
	  COBOL 202x Message Control System (MCS) statements SEND and RECEIVE
	* scanner.l: return WORD token if SUPPRESS is not reserved

2021-09-05  Simon Sobisch <simonsobisch@gnu.org>

	* cobc.h (cb_exception), cobc.c: add fatal attribute